Page About | Version Mobile

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,28 +1,33 @@
 <div class="about bg-transparent flex lg:flex-row w-full flex-col flex-col-reverse lg:h-[90vh]">
-  <div class="lg:w-[40%] bg-[#e6dace] lg:h-auto h-[25vh]">
+  <div class="lg:w-[40%] bg-[#e6dace] lg:h-auto h-[70vh]">
 
   </div>
-  <div class="lg:w-[60%] lg:h-auto h-[25vh]">
+  <div class="lg:w-[60%] lg:h-auto h-[45vh]">
 
   </div>
 </div>
 
-<div class="card absolute lg:w-[50%] w-[90%] lg:top-[25%] top-[15%] lg:left-[25%] left-[5%] flex flex-row h-auto">
-  <div class="moi bg-[#f4ece6] w-full flex flex-col justify-between shadow-xl">
-    <div class="img content-center flex justify-center lg:p-4 p-0 " >
-      <img src="../../../assets/mass.webp" alt="" srcset="" class="rounded-full bg-gray-300  ">
+<div class="card absolute lg:w-[50%] w-[90%] lg:top-[25%] top-[15%] lg:left-[25%] left-[5%] flex lg:flex-row flex-col h-auto">
+  <div class="moi bg-[#f4ece6] lg:w-full w-[90%] flex flex-col lg:justify-between justify-around shadow-xl">
+    <div class="img content-center flex justify-center lg:p-4 p-2 " >
+      <img src="../../../assets/mass.webp" alt="" srcset="" class="rounded-full  bg-gray-300  ">
     </div>
-    <div class="flex justify-center lg:mt-4  font-bold">
+    <div class="flex justify-center lg:mt-4 mt-2  font-bold">
       <h1 class="text-center lg:text-[25px]">Massam <br>Ndongo</h1>
     </div>
-    <div class=" flex justify-center mt-4">
+    <div class=" flex justify-center lg:mt-4 mt-2">
       <div class=" w-[20%] h-[0.5vh] bg-[#0050ff] "></div>
     </div>
-    <div class="flex justify-center mt-4">
+    <div class="flex justify-center lg:mt-4 mt-2 flex-row inline-flex lg:hidden">
+      <button class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 mr-2 font-bold">CV</button>
+      <button class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 ml-2 font-bold">PROJETS</button>
+
+    </div>
+    <div class="flex justify-center lg:mt-4 mt-2 inline-flex sm:hidden m-2">
       <h1 class="text-center lg: text-[20px]">Développeur Web</h1>
     </div>
 
-     <div class="img-network flex flex-row justify-center bg-white p-2 mt-4">
+     <div class="img-network flex flex-row justify-center bg-white p-2 lg:mt-4 mt-2">
       <a href=""  class="lg:p-2 p-1">
         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"/></svg>
       </a>
@@ -40,7 +45,7 @@
       </a>
     </div>
   </div>
-  <div class="presentatiion p-2 flex flex-col justify-center">
+  <div class="presentatiion lg:w-auto w-[90%] p-2 flex flex-col justify-center">
     <div class="p-4">
       <h1 class="lg:text-[60px] text-2xl font-bold">HELLO</h1>
     </div>
@@ -49,9 +54,10 @@
         Qui je suis et ce que je fais.
       </p>
     </div>
-    <div class="p-4 flex flex-row">
+    <div class="p-4 flex flex-row lg:inline-flex hidden">
       <button class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 mr-2 font-bold">CV</button>
       <button class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 ml-2 font-bold">PROJETS</button>
+
     </div>
     <div class="p-4">
       <p>
