--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer flex lg:flex-row flex-col-reverse">
+<div class="footer flex lg:flex-row flex-col-reverse mt-4">
     <div class="text-footer p-4 lg:w-[50%] flex lg:justify-start justify-center">
         <span>© 2023 par Massam Ndongo&nbsp;</span>
         <span>Crée avec &nbsp;</span><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 448 512">
