Page About | Ajout des liens externes et internes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="px-2 sm:px-4 py-4 sm:py-5" aria-label="Main navigation">
+<nav class="px-2 sm:px-4 py-4 sm:py-5 bg-white" aria-label="Main navigation">
   <div class="sm:container-fluid md:container flex flex-wrap justify-between items-center mx-auto">
     <!-- <span class="w-4 h-4 bg-blue-500"></span> -->
     <a  class="flex items-center">
