Page CV | Mise en place Card - Version Laptop

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -51,16 +51,16 @@
   </div>
   <div class="presentatiion lg:w-auto w-[90%] p-2 flex flex-col justify-center">
     <div class="p-4">
-      <h1 class="lg:text-[60px] text-2xl font-bold">HELLO</h1>
+      <h1 class="lg:text-[60px] text-[30px] lg:mt-0 mt-[5%] font-bold">HELLO</h1>
     </div>
     <div class="p-4">
-      <p class="lg:text-[25px]">
+      <p class="lg:text-[25px] text-[20px] font-bold">
         Qui je suis et ce que je fais.
       </p>
     </div>
     <div class="p-4 flex flex-row lg:inline-flex hidden">
-      <button routerLink="/cv" class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 mr-2 font-bold">CV</button>
-      <button routerLink="/projets" class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 rounded-3xl text-center px-[10%] py-1 ml-2 font-bold">PROJETS</button>
+      <button routerLink="/cv" class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600  text-center px-[10%] py-1 mr-2 font-bold">CV</button>
+      <button routerLink="/projets" class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 text-center px-[10%] py-1 ml-2 font-bold">PROJETS</button>
 
     </div>
     <div class="p-4">
