--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,19 @@
 <div class="footer flex lg:flex-row flex-col-reverse mt-4">
-    <div class="text-footer p-4 lg:w-[50%] flex lg:justify-start justify-center">
+    <div class="text-footer p-4 lg:w-[50%] flex lg:justify-start lg:items-center justify-around">
         <span>© 2023 par Massam Ndongo&nbsp;</span>
         <span>Crée avec &nbsp;</span><svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 448 512">
           <path d="M185.7 268.1h76.2l-38.1-91.6-38.1 91.6zM223.8 32L16 106.4l31.8 275.7 176 97.9 176-97.9 31.8-275.7zM354 373.8h-48.6l-26.2-65.4H168.6l-26.2 65.4H93.7L223.8 81.5z"/></svg>
     </div>
     <div class="infos lg:p-4 p-0 lg:w-[50%] flex lg:justify-evenly grid lg:grid-cols-3 lg:gap-3 grid-cols-2 gap-2">
-        <div class="phone flex flex-col  justify-center">
+        <div class="phone flex flex-col lg:mt-0 mt-4 justify-center">
           <h4 class="font-bold text-center">Tel</h4>
           <span class="text-center">+221 77 492 91 93</span>
         </div>
-        <div class="mail flex flex-col  justify-center">
+        <div class="mail flex flex-col lg:mt-0 mt-4 justify-center">
           <h4 class="font-bold text-center">Email</h4>
           <span class="text-center">massndongo86gmail.com</span>
         </div>
-        <div class="network flex flex-col justify-center">
+        <div class="network flex flex-col justify-center lg:mt-0 mt-4">
           <h4 class="font-bold text-center">En ligne</h4>
           <div class="img-network flex flex-row justify-center">
             <a href="https://www.facebook.com/massam.ndongo1" target="_blank" class="lg:p-2 p-1">
