--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="px-2 sm:px-4 py-4 sm:py-5 bg-white" aria-label="Main navigation">
-  <div class="sm:container-fluid md:container flex flex-wrap justify-between items-center mx-auto">
+  <div class="container-fluid flex flex-wrap justify-between items-center mx-auto">
     <!-- <span class="w-4 h-4 bg-blue-500"></span> -->
     <a  class="flex items-center">
       <span class="lg:w-4 lg:h-4 w-3 h-3 m-3 bg-[#0050ff]"></span>
