Page CV | Remplissage informations

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,16 @@
     <button app-hamburger></button>
     <div app-menu class="md:flex md:order-1 sm:bg-[#f4ece6] lg:bg-transparent">
       <li>
-        <a routerLink="/accueil" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}"
-        class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black rounded">À PROPOS DE MOI</a
+        <a
+          routerLink="/accueil" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}"
+          data-drawer-dismiss="menu-container"
+          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black rounded">À PROPOS DE MOI</a
         >
       </li>
       <li>
         <a
           routerLink="/cv" routerLinkActive="active"
+          data-drawer-dismiss="menu-container"
           class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
           >CV</a
         >
@@ -25,6 +28,7 @@
       <li>
         <a
           routerLink="/projets" routerLinkActive="active"
+          data-drawer-dismiss="menu-container"
           class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
           >PROJETS</a
         >
@@ -32,6 +36,7 @@
       <li>
         <a
           routerLink="/contact" routerLinkActive="active"
+          data-drawer-dismiss="menu-container"
           class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
           >CONTACT</a
         >
