--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about bg-transparent flex lg:flex-row w-full flex-col flex-col-reverse lg:h-[90vh]">
-  <div class="lg:w-[40%] bg-[#e6dace] lg:h-auto h-[50vh]">
+  <div class="lg:w-[40%] bg-[#e6dace] lg:h-auto h-[60vh]">
 
   </div>
   <div class="lg:w-[60%] lg:h-auto h-[45vh]">
@@ -19,8 +19,8 @@
       <div class=" w-[20%] h-[0.5vh] bg-[#0050ff] "></div>
     </div>
     <div class="flex justify-center lg:mt-4 mt-2 flex-row inline-flex lg:hidden p-4">
-      <button routerLink="/projets" class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600  text-center lg:px-[10%] px-12 py-1 mr-2 font-bold">CV</button>
-      <button routerLink="/cv" class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600  text-center lg:px-[10%] px-6 py-1 ml-2 font-bold">PROJETS</button>
+      <button routerLink="/cv" class="inline-block sm:w-auto text-white bg-[#0050ff]  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600  text-center lg:px-[10%] px-12 py-1 mr-2 font-bold">CV</button>
+      <button routerLink="/projets" class="inline-block  sm:w-auto border-2 border-black  focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600  text-center lg:px-[10%] px-6 py-1 ml-2 font-bold">PROJETS</button>
 
     </div>
     <div class="flex justify-center lg:mt-4 mt-2 inline-flex sm:hidden m-2">
