--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center items-center w-full bg-marron">
+<div class="flex flex-col justify-center items-center w-full bg-marron pb-8">
   <div class="01 flex flex-row justify-center p-[5%]">
     <span class="lg:w-5 lg:h-5 w-3 h-3 m-3 bg-[#0050ff]"></span>
     <span class="mr-3 text-black" alt="logo" >
@@ -7,21 +7,229 @@
   </div>
   <div class="02 flex flex-row justify-between items-center lg:w-[35%] w-[85%]">
     <span class="lg:text-[20px] text-[15px] font-bold">Expérience</span>
-    <button (click)="downloadPdf()" class="inline-block lg:text-[20px] text-[11px] sm:w-auto border-2 bg-bleu text-white hover:text-black hover:border-bleu hover:bg-transparent focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 text-center px-[10%] py-1 ml-2 font-bold uppercase">télécharger cv</button>
+    <button (click)="downloadPdf()" class="inline-block lg:text-[15px] text-[11px] sm:w-auto border-2 bg-bleu text-white hover:text-black hover:border-bleu hover:bg-transparent focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 text-center px-[10%] py-1 ml-2 font-bold uppercase">télécharger cv</button>
   </div>
-  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-between  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
-    <div class="flex flex-col justify-center lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] font-bold text-bleu">2035-Maintenant</h1>
-      <h2 class="lg:text-[15px] font-bold uppercase lg:mt-2 mt-4">post occupé</h2>
-      <p class="lg: mt-4">
-        Non de l'entreprise
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Janvier 2023-Maintenant</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur FulStack</h2>
+      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+        LeadCom
         <br>
-        Ville - Pays
+        Dakar - Sénégal
       </p>
     </div>
-    <div class="flex flex-col justify-center lg:w-[60%] w-full lg:mt-[25%] mt-4">
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores in unde doloremque totam dolorum incidunt vel impedit accusantium doloribus blanditiis aspernatur ad porro sapiente quibusdam veritatis, voluptates cum, consequatur quo?</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4 text-[12px] lg:text-[15px]">
+      <p>Mission: Conception et développement d'applications digitales</p>
     </div>
   </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2023-Décembre 2023</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur PHP</h2>
+      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+        Groupe Sonatel
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
+      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+
+        <b>Mission:</b>
+        <li>Conception d'applications backend avec les frameworks Symfony et Laravel</li>
+        <li>Ecrire les tests automatisés</li>
+        <li>Développement d'APIs Rest</li>
+        <li>Connaissance et respect des outils d'intégration continue</li>
+        <li>Mettre en place une documentation d'installation ou d'utilisation</li>
+
+        <b>Projet:</b> <u> Mason</u> est une plateforme en interne qui consiste à automatiser et digitaliser les process.
+        <li>Support du projet Mason qui consiste à résoudre les remontés du client</li>
+
+        <b>Environnement: </b>
+        <li>Laravel</li>
+        <li>Angular</li>
+        <li>Jenkins</li>
+        <li>Jira</li>
+        <li>Docker</li>
+        <li>Activity </li>
+      </p>
+    </div>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur Frontend</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        Yité Technologies
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
+      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+
+        <b>Mission:</b>
+        <li>Conception d'application web</li>
+
+        <b>Projet:</b>
+        <li> Banxaas est une plateforme d'échanges de bitcoin via les moyens de paiement mobile</li>
+        <li>Dakar bitcoins days est un site mis en place pour le forum 100% dédié au bitcoin</li>
+        <b>Environnement: </b>
+        <li>Django Rest</li>
+        <li>Angular</li>
+        <li>Rust</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Javascript </li>
+      </p>
+    </div>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur Web/Mobile</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        Limo Direct Pay
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
+      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+
+        <b>Mission:</b>
+        <li>Conception et développement d’applications digitales.</li>
+
+        <b>Projet:</b>
+        <li>Application de gestion des bus tata</li>
+        <li>Pass covid: Back office d'une application mobile pour enrégistrer des patients qui ont reçu leur vaccin via une carte de qr code</li>
+        <b>Environnement: </b>
+        <li>CodeIgniter</li>
+        <li>Symfony</li>
+        <li>Angular</li>
+        <li>Ionic</li>
+        <li>Wordpress</li>
+      </p>
+    </div>
+  </div>
+
+
+  <div class="02 flex flex-row justify-between items-center lg:w-[35%] w-[85%] lg:mt-[5%] mt-[5%]">
+    <span class="lg:text-[20px] text-[20px] font-bold">Formation</span>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Janvier 2020 - Avril 2021</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Sonatel Academy</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        <b>Certificat de Spécialité en Développement Web/Mobile</b>
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2017 - Juillet 2019</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">CIGA (Centre d'Informatique Appliquée et de Gestion)</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        <b>Diplôme de Technicien Supérieur en Génie Informatique</b>
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Février 2013 - Juillet 2016</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Université Alioune Diop de Bambey - UADB</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        <b>Licence 2</b>
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+  </div>
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
+      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2012 - Juillet 2013</h1>
+      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Cours Privé Rénovation Guediawaye</h2>
+      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+        <b>Baccalauréat série S2</b>
+        <br>
+        Dakar - Sénégal
+      </p>
+    </div>
+  </div>
+
+
+
+  <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[3%] mt-[5%]">
+    <div class="w-full flex flex-col">
+      <h1 class="lg:text-[20px] text-[15px] font-bold">Compétences</h1>
+      <div class="flex lg:justify-evenly grid lg:grid-cols-3 lg:gap-3 grid-cols-2 gap-2 mt-[3%]">
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">HTML, CSS, JS, jQuery, PHP, SQL</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Symfony/API</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Laravel</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Angular, Ionic</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Wordpress</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Méthode Agile/Srcum</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">UML/MERISE</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Git/Github</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Front End & Back End</b>
+          </span>
+        </div>
+        <div class="flex flex-row items-center justify-start m-2 ml-0">
+          <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
+          <span class=" text-black text-[15px]" alt="logo" >
+            <b class="">Technical Documentation</b>
+          </span>
+        </div>
+      </div>
+
+    </div>
 </div>
