Page Contact et Prjets | Integration

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,1 +1,37 @@
-<p>project works!</p>
+<div class="flex flex-col justify-center items-center w-full bg-marron pb-8">
+  <div class="01 flex flex-row justify-center p-[5%]">
+    <span class="lg:w-5 lg:h-5 w-3 h-3 m-3 bg-[#0050ff]"></span>
+    <span class="mr-3 text-black" alt="logo" >
+      <b class="lg:text-title text-[20px]">Projets</b>
+    </span>
+  </div>
+  <div class="02 flex flex-row justify-between items-center lg:w-[35%] w-[85%]">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem nihil odit ullam, fugiat amet odio distinctio, numquam natus repellat totam cum error illo culpa. Excepturi magnam quas blanditiis quaerat.</p>
+  </div>
+
+
+  <div class="card bg-white shadow-2xl flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
+    <div class="flex flex-col justify-start lg:w-[60%] w-full mt-[5%]">
+      <div class="border-l-[11px] border-blue-600 p-4 pt-0 pb-0">
+        <h1 class="text-[20px] font-bold text-bleu">Nom du projet</h1>
+        <h2 class="mt-2">Titre du role</h2>
+      </div>
+      <p class="lg:mt-8 mt-4 p-4 border-l-[11px] border-white p-4 pt-0 pb-0">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga a quas at nulla, omnis consequuntur illum aliquam ratione. Fugiat laboriosam eos dicta, nam necessitatibus itaque aut deserunt iusto assumenda. Temporibus!
+      </p>
+    </div>
+    <div class="flex flex-col lg:w-[40%] w-full">
+      <img src="../../../assets/mass.webp" alt="" srcset="" class="">
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
