--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,81 @@
-<p>contact works!</p>
+<div class="flex flex-col justify-center items-center w-full bg-marron pb-8">
+  <div class="01 flex flex-row justify-center p-[3%]">
+    <span class="lg:w-5 lg:h-5 w-3 h-3 m-3 bg-[#0050ff]"></span>
+    <span class="mr-3 text-black" alt="logo" >
+      <b class="lg:text-title text-[20px]">Contact</b>
+    </span>
+  </div>
+
+<div class="min-h-screen p-0 sm:p-12 lg:w-[50%] w-[85%]">
+  <div class="mx-auto  px-8 py-12 w-full bg-white border-0 shadow-lg ">
+    <!-- <h1 class="text-2xl font-bold mb-8">Form With Floating Labels</h1> -->
+    <form id="form" novalidate>
+
+      <div class="flex lg:flex-row flex-col lg:space-x-4">
+        <div class="relative z-0 w-full mb-5">
+          <label for="date" class="duration-300 top-3 -z-1 origin-0 text-gray-500">Prénoms*</label>
+          <input
+            type="text"
+            placeholder=" "
+            class="pt-3 pb-2 block w-full px-0 mt-0 bg-transparent border-0 border-b-2 appearance-none focus:outline-none focus:ring-0 focus:border-[#0050ff] border-gray-200"
+          />
+        </div>
+        <div class="relative z-0 w-full mb-5 lg:mb-0">
+          <label for="time" class="duration-300 top-3 -z-1 origin-0 text-gray-500">Nom*</label>
+          <input
+            type="text"
+            name="time"
+            placeholder=" "
+            class="pt-3 pb-2 block w-full px-0 mt-0 bg-transparent border-0 border-b-2 appearance-none focus:outline-none focus:ring-0 focus:border-[#0050ff] border-gray-200"
+          />
+        </div>
+      </div>
+      <div class="relative z-0 w-full mb-5">
+
+        <label for="name" class="duration-300 top-3 -z-1 origin-0 text-gray-500">Email*</label>
+        <input
+          type="email"
+          name="name"
+          placeholder=" "
+          required
+          class="pt-3 pb-2 block w-full px-0 mt-0 bg-transparent border-0 border-b-2 appearance-none focus:outline-none focus:ring-0 focus:border-[#0050ff] border-gray-200"
+        />
+      </div>
+
+      <div class="relative z-0 w-full mb-5">
+        <label for="money" class="duration-300 top-3 left-5 -z-1 origin-0 text-gray-500">Objet</label>
+        <input
+          type="text"
+          name="money"
+          placeholder=" "
+          class="pt-3 pb-2 pl-5 block w-full px-0 mt-0 bg-transparent border-0 border-b-2 appearance-none focus:outline-none focus:ring-0 focus:border-[#0050ff] border-gray-200"
+        />
+      </div>
+
+      <div class="relative z-0 w-full mb-5">
+        <label for="duration" class="uration-300 top-3 -z-1 origin-0 text-gray-500">Message</label>
+        <textarea id="about" name="about" rows="3" class="pt-3 pb-2 pr-12 block w-full rounded-md  px-0 mt-0 bg-transparent border-0 border-b-2 border-gray-200 appearance-none py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:outline-none focus:ring-0 focus:border-[#0050ff] sm:text-sm sm:leading-6"></textarea>
+      </div>
+
+      <button
+        id="button"
+        type="button"
+        class="px-6 py-3 mt-3 text-lg text-white transition-all duration-150 ease-linear shadow outline-none bg-[#0050ff] hover:bg-blue-400 hover:shadow-lg focus:outline-none"
+      >
+        Envoyer
+      </button>
+    </form>
+  </div>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
