--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -6,35 +6,35 @@
     </span>
   </div>
   <div class="02 flex flex-row justify-between items-center lg:w-[35%] w-[85%]">
-    <span class="lg:text-[20px] text-[15px] font-bold">Expérience</span>
+    <span class=" font-bold">Expérience</span>
     <button (click)="downloadPdf()" class="inline-block lg:text-[15px] text-[11px] sm:w-auto border-2 bg-bleu text-white hover:text-black hover:border-bleu hover:bg-transparent focus:ring-4 focus:outline-none focus:ring-gray-200 sm:focus:ring-blue-600 text-center px-[10%] py-1 ml-2 font-bold uppercase">télécharger cv</button>
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Janvier 2023-Maintenant</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur FulStack</h2>
-      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+      <h1 class="text-[20px] font-bold text-bleu">Janvier 2023-Maintenant</h1>
+      <h2 class="font-bold uppercase lg:mt-2 mt-4">Développeur FulStack</h2>
+      <p class="lg:mt-4 ">
         LeadCom
         <br>
         Dakar - Sénégal
       </p>
     </div>
-    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4 text-[12px] lg:text-[15px]">
+    <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
       <p>Mission: Conception et développement d'applications digitales</p>
     </div>
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2023-Décembre 2023</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur PHP</h2>
-      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+      <h1 class="text-[20px] font-bold text-bleu">Octobre 2023-Décembre 2023</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Développeur PHP</h2>
+      <p class="lg:mt-4 ">
         Groupe Sonatel
         <br>
         Dakar - Sénégal
       </p>
     </div>
     <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
-      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+      <p class="lg:mt-4 ">
 
         <b>Mission:</b>
         <li>Conception d'applications backend avec les frameworks Symfony et Laravel</li>
@@ -58,16 +58,16 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur Frontend</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class="text-[20px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Développeur Frontend</h2>
+      <p class="lg: mt-4 ">
         Yité Technologies
         <br>
         Dakar - Sénégal
       </p>
     </div>
     <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
-      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+      <p class="lg:mt-4 ">
 
         <b>Mission:</b>
         <li>Conception d'application web</li>
@@ -87,16 +87,16 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Développeur Web/Mobile</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class="text-[20px] font-bold text-bleu">Avril 2022 - Octobre 2022</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Développeur Web/Mobile</h2>
+      <p class="lg: mt-4 ">
         Limo Direct Pay
         <br>
         Dakar - Sénégal
       </p>
     </div>
     <div class="flex flex-col justify-start lg:w-[60%] w-full lg:mt-[10%] mt-4">
-      <p class="lg:mt-4 text-[12px] lg:text-[15px]">
+      <p class="lg:mt-4 ">
 
         <b>Mission:</b>
         <li>Conception et développement d’applications digitales.</li>
@@ -120,9 +120,9 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Janvier 2020 - Avril 2021</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Sonatel Academy</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class=" font-bold text-bleu">Janvier 2020 - Avril 2021</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Sonatel Academy</h2>
+      <p class="lg: mt-4 ">
         <b>Certificat de Spécialité en Développement Web/Mobile</b>
         <br>
         Dakar - Sénégal
@@ -131,9 +131,9 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2017 - Juillet 2019</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">CIGA (Centre d'Informatique Appliquée et de Gestion)</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class=" font-bold text-bleu">Octobre 2017 - Juillet 2019</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">CIGA (Centre d'Informatique Appliquée et de Gestion)</h2>
+      <p class="lg: mt-4 ">
         <b>Diplôme de Technicien Supérieur en Génie Informatique</b>
         <br>
         Dakar - Sénégal
@@ -142,9 +142,9 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Février 2013 - Juillet 2016</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Université Alioune Diop de Bambey - UADB</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class=" font-bold text-bleu">Février 2013 - Juillet 2016</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Université Alioune Diop de Bambey - UADB</h2>
+      <p class="lg: mt-4 ">
         <b>Licence 2</b>
         <br>
         Dakar - Sénégal
@@ -153,9 +153,9 @@
   </div>
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex lg:flex-row flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[2%] mt-[5%]">
     <div class="flex flex-col justify-start lg:w-[40%] w-full mt-[5%]">
-      <h1 class="lg:text-[20px] text-[15px] font-bold text-bleu">Octobre 2012 - Juillet 2013</h1>
-      <h2 class="lg:text-[15px] text-[12px] font-bold uppercase lg:mt-2 mt-4">Cours Privé Rénovation Guediawaye</h2>
-      <p class="lg: mt-4 text-[12px] lg:text-[15px]">
+      <h1 class=" font-bold text-bleu">Octobre 2012 - Juillet 2013</h1>
+      <h2 class=" font-bold uppercase lg:mt-2 mt-4">Cours Privé Rénovation Guediawaye</h2>
+      <p class="lg: mt-4 ">
         <b>Baccalauréat série S2</b>
         <br>
         Dakar - Sénégal
@@ -167,7 +167,7 @@
 
   <div class="03 bg-white shadow-2xl lg:p-[2%] p-[5%] flex flex-col justify-start  lg:w-[35%] w-[85%] lg:mt-[3%] mt-[5%]">
     <div class="w-full flex flex-col">
-      <h1 class="lg:text-[20px] text-[15px] font-bold">Compétences</h1>
+      <h1 class=" font-bold">Compétences</h1>
       <div class="flex lg:justify-evenly grid lg:grid-cols-3 lg:gap-3 grid-cols-2 gap-2 mt-[3%]">
         <div class="flex flex-row items-center justify-start m-2 ml-0">
           <span class="w-2 h-2 mr-3 bg-[#0050ff]"></span>
