Page Contact | Link avec Firebase

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,14 +14,14 @@
         <a
           routerLink="/accueil" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}"
           data-drawer-dismiss="menu-container"
-          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black rounded">À PROPOS DE MOI</a
+          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] font-light">À PROPOS DE MOI</a
         >
       </li>
       <li>
         <a
           routerLink="/cv" routerLinkActive="active"
           data-drawer-dismiss="menu-container"
-          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
+          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff]  font-light"
           >CV</a
         >
       </li>
@@ -29,7 +29,7 @@
         <a
           routerLink="/projets" routerLinkActive="active"
           data-drawer-dismiss="menu-container"
-          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
+          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff]  font-light"
           >PROJETS</a
         >
       </li>
@@ -37,7 +37,7 @@
         <a
           routerLink="/contact" routerLinkActive="active"
           data-drawer-dismiss="menu-container"
-          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] md:text-black    rounded"
+          class="block py-2 px-4 md:p-0 text-gray-900 hover:text-[#0050ff] font-light"
           >CONTACT</a
         >
       </li>
